[tool.poetry]
name = "actransit-rt"
version = "0.1.0"
description = "Achive AC Transit Realtime Feeds"
authors = ["Bryan Culbertson <bryan.culbertson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.7"
python-dotenv = "1.0.0"
functions-framework = "3.5.0"
flask = "3.0.0"
gtfs-realtime-bindings = "1.0.0"
requests = "2.31.0"
smart-open = {version = "6.4.0", extras = ["gcs"]}
cloudpathlib = {version = "0.17.0", extras = ["gs"]}
pendulum = "3.0.0"

[tool.poetry.group.dev.dependencies]
# Lint (versions duplicated in .pre-commit-config.yaml)
black = "23.12.1"
flake8 = "6.1.0"
isort = "5.13.2"
mypy = "1.8.0"
pre-commit = "3.6.0"
types-requests = "2.31.0.20231231"

# Test
tox = "4.11.4"
pytest = "8.0.0"
pytest-runner = "6.0.1"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
pytest-xdist = {version = "3.5.0", extras = ["psutil"]}
pytest-randomly = "3.15.0"

[tool.poetry.scripts]
actransit-rt = "actransit_rt.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--import-mode=importlib",
]
testpaths = ["tests"]
pythonpath = ["src"]
